# mof-bloom-hybrid

./: Makefile  README.md  pyproject.toml  requirements.txt  run_test.py
data/: readme.text
data/splits/: mpeg7_split_80_20.json
experiments/: baseline_robustness.py  baseline_synthetic.py  efficiency.py  exp3_corneal_ar_mof.py  fix_mpeg70_results.py  mpeg70_baselines_compare.py  mpeg70_baselines_compare_split.py  mpeg70_bloom_prefilter.py  mpeg70_bloom_prefilter_learned.py  mpeg70_bloom_prefilter_learned_split.py  mpeg70_bloom_prefilter_norm.py  mpeg70_make_split.py  mpeg7_retrieval.py  mpeg7_subset.py  nd_demo.py  plots_mpeg_bloom.py  plots_mpeg_bloom_ksweep.py  plots_mpeg_split_combined.py  plots_mpeg_split_combined_orig.py  plots_nd_demo.py  retrieval_clustering.py
experiments/plots/: plot_retrieval.py  plot_robustness.py
figures/: README.md
src/baselines/: efd_simple.py  fourier_descriptor.py  hu_moments.py  spherical_harmonics.py  zernike_descriptor.py
src/datasets/: learn_medoids.py  refs2d.py  support.py  tree_builder.py
src/mof/: bloom_tree.py  nd_support.py  opoi.py  projector_dict.py  projector_dict_nd.py
tables/: REAME.md  mpeg70_baselines_split.csv  mpeg70_bloom_results.csv  mpeg70_bloom_results_clean.csv  mpeg70_bloom_results_learned.csv  mpeg70_bloom_results_learned_split.csv  mpeg70_bloom_results_norm.csv  mpeg70_bloom_routes.txt  mpeg70_bloom_routes_learned.txt  mpeg70_bloom_routes_learned_split.txt  mpeg70_bloom_routes_norm.txt  mpeg7_results.csv  mpeg7_subset_results.csv  nd_demo.csv  retrieval.csv  robustness.csv
